feat: initial oscal componenet (#446)
* feat: initial oscal ci

* updating syntax

* rearrange files and names

* updated after local testing.

* Adding commit files back to pr

* removed extra space

* updated ref

* testing ref errors

* branch errors

* updated permissions

* Should fix the error on pushing.

* Add OSCAL

* Added renovate and made updates from comments

* wrong loki branch

* Updated eks/kms from main to a version.

* Remove gitlab oscal from renovate

* [ci skip]

* Trigger CI

* fixes yaml format/creates yaml formatter action

* testing new formatter action

* trying again

* format issue

* testing branch name issue

* formatter

* still testing input error

* Update commit code

* feat: fixing oscal formatter action

* feat: format issue on formatter action...

* feat: k3 ci ignore oscal/clean up formatter

* feat: testing

* test branch

* Apply automatic changes

* removed last testing pieces

---------

Co-authored-by: GitHub Actions <no-reply@github.com>
Co-authored-by: Micah Nagel <micah.nagel@defenseunicorns.com>
Co-authored-by: CloudBeard <CloudBeard@users.noreply.github.com>

--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -12,9 +12,11 @@ on:
       - "**/*.png"
       - "**/*.svg"
       - "aws/**"
+      - "oscal-component.y*ml"
       - ".github/workflows/*aws*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
       - ".github/workflows/*uds*.y*ml"
+      - "**/*oscal-component.y*aml"
 
 jobs:
   yaml-lint:
