--- a/renovate.json
+++ b/renovate.json
@@ -73,6 +73,16 @@
       ],
       "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}",
       "datasourceTemplate": "github-tags"
+    },
+    {
+      "fileMatch": [ 
+        "^.github/workflow/oscal/.*\\.ya?ml$",
+        "^aws/loki/main\\.tf",
+        "^aws/cloudtrail/main\\.tf"
+      ],
+      "matchStrings": ["https://github.com/(?<depName>.*)/(?<currentValue>v\\d+\\.\\d+\\.\\d+)"],
+      "datasourceTemplate": "github-tags",
+      "versioningTemplate": "semver"
     }
   ],
   "packageRules": [
