--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -8,14 +8,11 @@ istio:
     tenant-ingressgateway:
       type: "LoadBalancer"
   values:
+    authservice:
+      enabled: true
     meshConfig:
       meshMTLS:
         minProtocolVersion: TLSV1_3
-      extensionProviders:
-        - name: "authservice"
-          envoyExtAuthzGrpc:
-            service: "authservice.authservice.svc.cluster.local"
-            port: "10003"
     istiod:
       resources:
         requests:
