--- a/.github/workflows/create-uds-oscal-component.yaml
+++ b/.github/workflows/create-uds-oscal-component.yaml
@@ -34,7 +34,7 @@ jobs:
           make build
           cd ..
 
-      - name: Create DUBBD OSCAL-Componenet File
+      - name: Create DUBBD OSCAL-Component File
         run: ./component-generator/bin/component-generator aggregate --input .github/workflows/oscal/config-dubbd-oscal-component.yaml
 
       - name: Create DUBBD AWS OSCAL-Component File
@@ -42,6 +42,9 @@ jobs:
 
       - name: Create UDS Core AWS OSCAL-Component File
         run: ./component-generator/bin/component-generator aggregate --input .github/workflows/oscal/config-uds-core-aws-oscal-component.yaml
+
+      - name: Create DUBBD On-Prem OSCAL-Component File
+        run: ./component-generator/bin/component-generator aggregate --input .github/workflows/oscal/config-dubbd-on-prem-oscal-component.yaml
 
       - name: Clean Up
         run: rm -rf component-generator
