--- a/on-prem/zarf-config.yaml
+++ b/on-prem/zarf-config.yaml
@@ -10,7 +10,7 @@ package:
       flux_version: "0.41.2"
   deploy:
     set:
-      # -- Domain name for the EKS cluster
+      # -- Domain name for the cluster
       domain: bigbang.dev
       # -- TLS key
       key_file: bigbang.dev.key
