--- a/.github/workflows/oscal/config-dubbd-oscal-component.yaml
+++ b/.github/workflows/oscal/config-dubbd-oscal-component.yaml
@@ -18,8 +18,8 @@ components: # Define paths on the local filesystem or remote paths in git reposi
       path: oscal-component.yaml
     - git: https://repo1.dso.mil/big-bang/product/packages/monitoring.git@45.27.2-bb.4
       path: oscal-component.yaml
-    # - git: https://repo1.dso.mil/big-bang/product/packages/neuvector.git@2.4.5-bb.0 # Upstream BB missing oscal-component.yaml
-    #   path: oscal-component.yaml
+    - git: https://repo1.dso.mil/big-bang/product/packages/neuvector.git@2.4.5-bb.1
+      path: oscal-component.yaml
     - git: https://repo1.dso.mil/big-bang/product/packages/promtail.git@6.11.3-bb.0
       path: oscal-component.yaml
     - git: https://repo1.dso.mil/big-bang/product/packages/loki.git@5.8.9-bb.0
