chore: update flux version, migrate grafana values

--- a/aws/values/aws-storage-class.yaml
+++ b/aws/values/aws-storage-class.yaml
@@ -5,15 +5,17 @@ tempo:
 
 monitoring:
   values:
-    grafana:
-      persistence:
-        storageClassName: ###ZARF_VAR_STORAGE_CLASS_NAME###
     prometheus:
       prometheusSpec:
         storageSpec:
           volumeClaimTemplate:
             spec:
               storageClassName: ###ZARF_VAR_STORAGE_CLASS_NAME###
+
+grafana:
+  values:
+    persistence:
+      storageClassName: ###ZARF_VAR_STORAGE_CLASS_NAME###
 
 loki:
   values:
