--- a/.github/workflows/create-uds-oscal-component.yaml
+++ b/.github/workflows/create-uds-oscal-component.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: Yaml Formatter and Cleanup
         run: |
           npm install --save-dev --save-exact prettier
-          npx prettier oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml --write
+          npx prettier oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml on-prem/oscal-component.yaml --write
           npm uninstall --save-dev prettier
           rm -rf node_modules/
           rm package.json
