chore: Adding new release notification to the public-uds Slack channel. Tunning message....

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -26,7 +26,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":mega: :mega DUBBD <version> <release notes body> "
+                    "text": ":mega: DUBBD ${{ github.event.release.tag_name}} is published! <version> <release notes body> "
                   }
                 }
               ]
