--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -44,7 +44,7 @@ jobs:
       working_dir: defense-unicorns-distro
     secrets: inherit
 
-  notify-slack:
-    needs: tag-new-version
-    if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
-    uses: ./.github/workflows/slack-notify-on-new-release.yaml
+# notify-slack:
+#   needs: tag-new-version
+#   if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
+#   uses: ./.github/workflows/slack-notify-on-new-release.yaml
