--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -2,14 +2,14 @@
 name: Slack Notification on Version Release
 
 on:
-# pull_request:
-#   branches:
-#     - faux-main-you-can-delete-me
+# release:
+#   types: [published]
+
   push:
     branches:
       - slack-message-on-new-version
-    tags:
-      - v0.0.6
+#   tags:
+#     - v0.0.6
 
 jobs:
   send-notification:
@@ -18,6 +18,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Get Latest Release
+        id: get_release
+        run: |
+          release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
+          release_tag=$(echo "$release_json" | jq -r '.tag_name') >> $GITHUB_OUTPUT
+          echo "Latest release tag: $release_tag"
+
 
       - name: Send Slack notification
         id: slack
@@ -31,7 +39,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":mega: DUBBD ${{ github.event.release.tag_name }} is published! <version> <release notes body> "
+                    "text": ":mega: DUBBD ${{ steps.get_release.outputs.release_tag }} is published! <version> <release notes body> "
                   }
                 }
               ]
