--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -40,7 +40,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":mega: DUBBD  is published! <release notes body> "
+                    "text": ":mega: DUBBD ${{ steps.get_release.outputs.release_tag }} is published! <release notes body> "
                   }
                 }
               ]
