--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
           release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           release_tag=$(echo "$release_json" | jq -r '.tag_name') >> $GITHUB_OUTPUT
-          echo "Latest release tag: $release_tag"
+          echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
 
 
       - name: Send Slack notification
@@ -40,7 +40,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":mega: DUBBD ${{ steps.get_release.outputs.release_tag }} is published! <release notes body> "
+                    "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published! <release notes body> "
                   }
                 }
               ]
