--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -24,8 +24,8 @@ jobs:
         id: get_release
         run: |
           release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
-          release_tag=$(echo "$release_json" | jq -r '.tag_name') >> $GITHUB_OUTPUT
-          release_body=$(echo "$release_json" | jq -r '.body') >> $GITHUB_OUTPUT
+          release_tag=$(echo "$release_json" | jq -r '.tag_name')
+          release_body=$(echo "$release_json" | jq -r '.body')
           echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
           echo "RELEASE_BODY=$release_body" >> $GITHUB_ENV
 
