--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -37,16 +37,51 @@ jobs:
           channel-id: 'uds-new-release'
           payload: |
             {
+              "text": "Danny Torrence left a 1 star review for your property.",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published! ${{ format(env.RELEASE_BODY) }} "
+                    "text": "Danny Torrence left the following review for your property:"
                   }
+                },
+                {
+                  "type": "section",
+                  "block_id": "section567",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "<https://example.com|Overlook Hotel> \\n :star: \\n Doors had too many axe holes, guest in room 237 was far too rowdy, whole place felt stuck in the 1920s."
+                  },
+                  "accessory": {
+                    "type": "image",
+                    "image_url": "https://is5-ssl.mzstatic.com/image/thumb/Purple3/v4/d3/72/5c/d3725c8f-c642-5d69-1904-aa36e4297885/source/256x256bb.jpg",
+                    "alt_text": "Haunted hotel image"
+                  }
+                },
+                {
+                  "type": "section",
+                  "block_id": "section789",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Average Rating*\\n1.0"
+                    }
+                  ]
                 }
               ]
             }
+#           {
+#             "blocks": [
+#               {
+#                 "type": "section",
+#                 "text": {
+#                   "type": "mrkdwn",
+#                   "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published!\n${{ format(env.RELEASE_BODY) }} "
+#                 }
+#               }
+#             ]
+#           }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
