--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -37,7 +37,7 @@ jobs:
             {
               "blocks": [
                 {
-                  "type": "section",
+                  "type": "header",
                   "text": {
                     "type": "mrkdwn",
                     "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published! "
