chore: Adding new release notification to the public-uds Slack channel. Tuning message...

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -39,8 +39,10 @@ jobs:
                 {
                   "type": "header",
                   "text": {
-                    "type": "mrkdwn",
-                    "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published! "
+                    "type": "plain_text",
+                    "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published! ",
+                    "emoji": true
+
                   }
                 }
               ]
