chore: Adding new release notification to the public-uds Slack channel. Tuning message...

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -44,6 +44,13 @@ jobs:
                     "emoji": true
 
                   }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{ env.RELEASE_TAG }} this will be the body \n is published! "
+                  }
                 }
               ]
             }
