chore: Adding new release notification to the public-uds Slack channel. Tuning message...

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -45,6 +45,9 @@ jobs:
 
                   }
                 },
+            		{
+            			"type": "divider"
+            		},
                 {
                   "type": "section",
                   "text": {
