--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -27,6 +27,14 @@ jobs:
           release_tag=$(echo "$release_json" | jq -r '.tag_name')
           echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
 
+      - name: Get Latest Release Body
+        id: get_body
+        run: |
+          release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
+          release_body=$(echo "$release_json" | jq -r '.body')
+          echo "RELEASE_BODY=$release_BODY" >> $GITHUB_ENV
+
+
 
       - name: Send Slack notification
         id: slack
