--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           release_body=$(echo "$release_json" | jq -r '.body')
-          echo "RELEASE_BODY=$release_BODY" >> $GITHUB_ENV
+          echo "RELEASE_BODY=$release_body" >> $GITHUB_ENV
 
 
 
