--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -21,12 +21,9 @@ jobs:
           release_tag=$(echo "$release_json" | jq -r '.tag_name')
           echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
 
-      - name: Get Latest Release Body
-        id: get_body
-        run: |
-          release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
-          release_body=$(echo "$release_json" | jq -r '.body')
-          echo "RELEASE_BODY=$release_body" >> $GITHUB_ENV
+          # Base64 encode the release_body and store it as a single-line environment variable
+          release_body=$(echo "$release_json" | jq -r '.body' | base64)
+          echo "RELEASE_BODY_BASE64=$release_body" >> $GITHUB_ENV
 
       - name: Send Slack notification
         id: slack
@@ -51,7 +48,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":scroll: *Release Notes:*\n${{ format(env.RELEASE_BODY) }}"
+                    "text": ":scroll: *Release Notes:*\n${{ env.RELEASE_BODY_BASE64 | decodeBase64 }}"
                   }
                 }
               ]
