--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -48,6 +48,67 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
+                    "text": ":scroll: *Release Notes:*\n$(echo -n ${{ env.RELEASE_BODY_BASE64 }} | base64 --decode)"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
+
+
+
+name: Slack Notification on Version Release
+
+on:
+  push:
+    branches:
+      - faux-main-you-can-delete-me
+      - slack-message-on-new-version
+
+jobs:
+  send-notification:
+    runs-on: ubuntu-latest
+    name: New version released
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Get Latest Release
+        id: get_release
+        run: |
+          release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
+          release_tag=$(echo "$release_json" | jq -r '.tag_name')
+          echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
+
+          # Base64 encode the release_body and store it as a single-line environment variable
+          release_body=$(echo "$release_json" | jq -r '.body' | base64)
+          echo "RELEASE_BODY_BASE64=$release_body" >> $GITHUB_ENV
+
+      - name: Send Slack notification
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          channel-id: 'uds-new-release'
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published!",
+                    "emoji": true
+                  }
+                },
+                {
+                  "type": "divider"
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
                     "text": ":scroll: *Release Notes:*\n${{ env.RELEASE_BODY_BASE64 | decodeBase64 }}"
                   }
                 }
