--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -19,12 +19,9 @@ jobs:
         run: |
           release_json=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           release_tag=$(echo "$release_json" | jq -r '.tag_name')
+          release_body=$(echo "$release_json" | jq -r '.body' | base64)
           echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
-
-          # Base64 encode the release_body and store it in a file
-          echo "$release_json" | jq -r '.body' | base64 > release_body_base64.txt
-          echo "$release_json"
-          cat release_body_base64.txt
+          echo "RELEASE_BODY=$release_body" >> $GITHUB_ENV
 
       - name: Send Slack notification
         id: slack
@@ -49,7 +46,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":scroll: *Release Notes:*\n${{ steps.get_release.outputs.release_body }}"
+                    "text": ":scroll: *Release Notes:*\n${{ env.RELEASE_BODY }}"
                   }
                 }
               ]
