--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -21,17 +21,10 @@ jobs:
           release_tag=$(echo "$release_json" | jq -r '.tag_name')
           echo "RELEASE_TAG=$release_tag" >> $GITHUB_ENV
 
-          release_body_stripped=$(echo "$release_json" | jq -r '.body')
-          release_body_stripped="$(echo "$release_body_stripped" | sed -z 's/\n/\\n/g')"
-          echo "RELEASE_BODY=$release_body_stripped" >> $GITHUB_ENV
-          echo $release_body_stripped
-
-          # Base64 encode the release_body and store it as a single-line environment variable
-          release_body=$(echo "$release_json" | jq -r '.body' | base64 -w 0)
-          echo "RELEASE_BODY_BASE64=$release_body" >> $GITHUB_ENV
-
-          echo $release_json
-          echo "-----\n"
+          release_body=$(echo "$release_json" | jq -r '.body')
+          release_body="$(echo "$release_body" | sed -z 's/\n/\\n/g')"
+          echo "RELEASE_BODY=$release_body" >> $GITHUB_ENV
+          echo "---/n"
           echo $release_body
 
       - name: Send Slack notification
@@ -57,7 +50,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": ":scroll: *Release Notes:*\n`$(echo -n ${{ env.RELEASE_BODY }} | base64 --decode)`"
+                    "text": ":scroll: *Release Notes:*\n${{ env.RELEASE_BODY }}"
                   }
                 }
               ]
