chore: Adding new release notification to the public-uds Slack channel. Tuning message...

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -52,6 +52,15 @@ jobs:
                     "type": "mrkdwn",
                     "text": "${{ env.RELEASE_BODY }}"
                   }
+                }, 
+                {
+                  "type": "divider"
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "text": "*Sally* has requested you set the deadline for the Nano launch project",
+                    "type": "mrkdwn"
                 }
               ]
             }
