--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -59,7 +59,7 @@ jobs:
                 {
                   "type": "section",
                   "text": {
-                    "text": "*Sally* has requested you set the deadline for the Nano launch project",
+                    "text": "## *Sally* has requested you set the deadline for the Nano launch project",
                     "type": "mrkdwn"
                   }
                 }
