--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -1,8 +1,7 @@
 name: Slack Notification on Version Release
 
 on:
-  release:
-    types: [published]
+  workflow_call:
 
 jobs:
   send-notification:
