testing slack notifications
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -1,7 +1,9 @@
 name: Slack Notification on Version Release
 
 on:
-  workflow_call:
+  push:
+    branches:
+      - slack-message-on-new-version-III
 
 jobs:
   send-notification:
