--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -3,6 +3,7 @@ name: Slack Notification on Version Release
 on:
   push:
     branches:
+      - faux-main-you-can-delete-me
       - slack-message-on-new-version-III
 
 jobs:
@@ -43,10 +44,23 @@ jobs:
                   }
                 },
                 {
+                  "type": "divider"
+                },
+                {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
                     "text": "${{ env.RELEASE_BODY }}"
+                  }
+                }, 
+                {
+                  "type": "divider"
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "text": "*Sally* has requested you set the deadline for the Nano launch project",
+                    "type": "mrkdwn"
                   }
                 }
               ]
