testing slack notifications
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/.github/workflows/slack-notify-on-new-release.yaml
+++ b/.github/workflows/slack-notify-on-new-release.yaml
@@ -42,6 +42,13 @@ jobs:
                     "text": ":mega: DUBBD ${{ env.RELEASE_TAG }} is published!",
                     "emoji": true
                   }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{ env.RELEASE_BODY }}"
+                  }
                 }
               ]
             }
