feat: auto generate default password for grafana ui

--- a/defense-unicorns-distro/manifests/admin-interface-credentials.yaml
+++ b/defense-unicorns-distro/manifests/admin-interface-credentials.yaml
@@ -6,5 +6,4 @@ metadata:
   labels: 
     generated-by: dubbd
 data:
-  grafana-password: "###ZARF_VAR_GRAFANA_PASSWORD###"
-  neuvector-password: "###ZARF_VAR_NEUVECTOR_PASSWORD###"
+  grafana-password: ###ZARF_VAR_GRAFANA_ADMIN_PASSWORD_BASE64###
