--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -33,6 +33,10 @@ components:
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: generate-credentials
+    required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: download-flux
     required: true
     import:
